# prebetter

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SECURITY_SCAN_REPORT.md  brandenburgDesign.md  design.md  prelude_structure.sql  requirements.txt
.github/workflows/: ruff.yml
app/: main.py
app/api/v1/: endpoints.py
app/database/: config.py
app/models/: prelude.py
app/schemas/: prelude.py
backend/: .cursorrules  .env.example  .gitignore  CLAUDE.md  MIGRATION_STATUS.md  README.md  REFACTOR_PLAN.md  SQLAlchemy_v2_Migration_Strategy.md  backlock.md  debug_export.py  prelude.xml  prelude_structure.sql  pyproject.toml  pyrightconfig.json  query.txt  requirements.txt
backend/.cursor/rules/: fastapi-dev.mdc
backend/.github/workflows/: ruff.yml
backend/Prelude SIEM API/: bruno.json
backend/Prelude SIEM API/alerts/: Get Alert.bru  Get Grouped Alerts.bru  Get Statistics Summary.bru  Get Timeline.bru  List Alerts.bru  Read Unique Analyzers.bru  Read Unique Classifications.bru  Read Unique Severities.bru
backend/app/: main.py
backend/app/api/: base.py  deps.py
backend/app/api/v1/: endpoints.py
backend/app/api/v1/routes/: __init__.py  alerts.py  auth.py  export.py  heartbeats.py  reference.py  statistics.py  users.py
backend/app/core/: config.py  datetime_utils.py  logging.py  security.py
backend/app/database/: cleanup.py  config.py  init_db.py  models.py  query_builders.py
backend/app/middleware/: cors.py  exception_handlers.py  request_tracking.py  setup.py
backend/app/models/: prelude.py  users.py
backend/app/repositories/: __init__.py  alerts.py  base.py
backend/app/schemas/: filters.py  prelude.py  users.py
backend/app/scripts/: README.md  __init__.py  create_user.py  prelude_cleanup.py  prelude_index_maintenance.py  prelude_pair_accelerator.py
backend/app/services/: __init__.py  alert_deletion.py  health.py  users.py
backend/tests/: conftest.py  pytest.ini  seed_prelude.py  seed_test_data.sql  test_alerts.py  test_api.py  test_auth.py  test_auth_edge_cases.py  test_datetime_utils.py  test_db_models_conversion.py  test_export.py  test_filters.py  test_health.py  test_heartbeats.py  test_reference.py  test_statistics.py  test_user.py  test_user_edge_cases.py
docs/: alert-deletion-analysis.md  orphan-prevention-guide.md  prelude-slow-query-analysis.md  ux-loading-states-analysis.md  vue-component-architecture-analysis.md  vue-performance-analysis.md
docs/frontend/: CLAUDE.md  README.md  Vue-Nuxt-Best-Practices-Analysis.md  nuxt-data-fetching-analysis.md  nuxt-ssr-patterns-analysis.md  vue-component-communication-analysis.md  vue-composables-analysis.md  vue-state-management-analysis.md  vue-typescript-analysis.md
docs/reference/: nuxtjs.md  table.md
frontend/: .cursorrules  .env.example  CLAUDE.md  DEVELOPER_GUIDE.md  README.md  auth.d.ts  bun.lockb  component-analysis.md  components.json  design.md  discovery-report.md  import-hierarchy-analysis.md  nuxt.config.ts  package.json  vitest.config.ts  vue-native-analysis.md  vue-principles-summary.md
frontend/.cursor/rules/: design.mdc  nuxtjs.mdc
frontend/app/: app.vue  error.vue  nuxt.config.ts
frontend/app/components/: AlertActions.vue  AlertStatisticsChart.vue  AlertsFilterPanel.vue  AlertsLiveIndicator.vue  AlertsTable.vue  AlertsTableFooter.vue  AlertsTimelineSkeleton.vue  AlertsToolbar.vue  ColorModeToggle.vue  (+18 more)
frontend/docs/: ARCHITECTURE.md  BEST_PRACTICES_AUDIT.md  BRANDENBURG_CSS_COMPARISON.md  BRANDENBURG_DESIGN_COMPLIANCE_ANALYSIS.md  VUE_NUXT_BEST_PRACTICES.md  WORKFLOWS.md  race-condition-analysis.md
frontend/test/: DateRangePresetLogic.test.ts  datePresets.test.ts  loginHandler.test.ts  serverApiProxy.test.ts  setup.ts  streamProxyAuth.test.ts
frontend/types/: auth.d.ts
tests/: conftest.py  test_api.py
(+202 files in other folders)
