[project]
name = "backend"
version = "0.1.0"
description = "Prelude Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "certifi==2024.12.14",
    "cffi==2.0.0",
    "click==8.3.0",
    "cryptography==46.0.2",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "fastapi[all]==0.119.0",
    "fastapi-cli==0.0.13",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.0.0",
    "jinja2==3.1.5",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mysql-connector-python==9.4.0",
    "packaging==24.2",
    "pluggy==1.5.0",
    "pycparser==2.22",
    "pydantic==2.12.0",
    "pydantic-core==2.41.1",
    "pygments==2.19.2",
    "pymysql==1.1.2",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "rich==14.2.0",
    "rich-toolkit==0.15.1",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.44",
    "starlette==0.48.0",
    "typer==0.19.2",
    "typing-extensions==4.15.0",
    "uvicorn==0.37.0",
    "uvloop==0.21.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
    "ruff>=0.9.4",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.3.0",
    "pyjwt>=2.10.1",
    "python-jose[cryptography]>=3.3.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint.per-file-ignores]
# Ignore E402 (module level import not at top of file) in test fixtures
# This is necessary because conftest.py must load environment variables before imports
"tests/conftest.py" = ["E402"]
